# stateful-agent-lakebase

./: .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
agent/: agent.py  config.yaml  deploy.py  driver.py
agent_server/: agent.py  config.py  evaluate_agent.py  start_server.py  utils.py  utils_memory.py
scripts/: quickstart.py  setup_lakebase_permissions.py  start_app.py
stateful_agents_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_notebooks/: test_app.py
user_summarizer/: 01_aggregate_conversations.py  02_aggregate_user_threads.py  03_summarize_user_profiles.py  04_create_synced_table.py  config.yaml  utils.py
